<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CategorizationActivity" >

    <Spinner
        android:id="@+id/spLanguageSort"
        android:layout_width="match_parent"
        android:layout_height="36dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="17dp" />

    <Spinner
        android:id="@+id/spTagSort"
        android:layout_width="match_parent"
        android:layout_height="36dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="17dp" />

    <Button
        android:id="@+id/btnAlphabeticSort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="Sort" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_marginTop="20dp"
        android:text="reset filter" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:drawSelectorOnTop="true"
        android:id="@+id/lvVocabulary"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>


</LinearLayout>